WebCore/dom/Text.h
@@ -39,6 +39,10 @@ public:
 
     PassRefPtr<Text> splitText(unsigned offset, ExceptionCode&);
 
+    // DOM Level 3: http://www.w3.org/TR/DOM-Level-3-Core/core.html#ID-1312295772
+    String wholeText() const;
+    PassRefPtr<Text> replaceWholeText(const String&, ExceptionCode&);
+
     // DOM methods overridden from parent classes
 
     virtual String nodeName() const;
